--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.7
-          channels: conda-forge,defaults
+          miniforge-variant: Mambaforge
+          use-mamba: true
+          python-version: 3.9
+          channels: conda-forge
           channel-priority: strict
           show-channel-urls: true
 
@@ -20,7 +22,7 @@ jobs:
         shell: bash -l {0}
         run: |
           conda config --set always_yes True
-          conda install --file requirements/run.txt --file requirements/tests.txt pip
+          mamba install --file requirements/run.txt --file requirements/tests.txt pip
           pip install --no-deps -e .
 
       - name: lint
