--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,9 +28,9 @@ jobs:
       - name: lint
         shell: bash -l {0}
         run: |
-          flake8
+          flake8 libcflib
 
       - name: run tests
         shell: bash -l {0}
         run: |
-          pytest -v
+          pytest -v tests
