--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,11 @@ jobs:
         with:
           miniforge-variant: Mambaforge
           use-mamba: true
-          python-version: 3.9
+          python-version: 3.10
           channels: conda-forge
           channel-priority: strict
           show-channel-urls: true
+          use-mamba: true
 
       - name: config conda and install
         shell: bash -l {0}
